# Kung-Fu-Chess

./: .gitignore  CLAUDE.md  CMakeLists.txt  GameInstance.hpp  PLAN.md  PROTOCOL.md  client_echo.cpp  client_main.cpp  main.cpp  messages.h  messages_envelope.h  messages_json.h  plan.md  server_echo.cpp  server_main.cpp
engine/: GameEngine.cpp
input/: BoardMapper.cpp  Controller.cpp
model/: GameOverState.hpp  GameState.hpp  MoveRecord.hpp  PieceJump.hpp  PieceRest.hpp  Score.hpp
realtime/: RealTimeArbiter.cpp  RealTimeArbiter.hpp
rules/: PieceRules.cpp  PieceRules.hpp  RuleEngine.cpp  RuleEngine.hpp  config.hpp
tests/: Engine.tests.cpp  Movement.tests.cpp
view/: AnimationState.cpp  AnimationState.hpp  image_view.cpp  image_view.hpp  img.cpp  img.hpp  renderer.hpp
